--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "AdventOfCode2021"
 version = "1.0.0"
 edition = "2018"
 
+[target.x86_64-unknown-linux-gnu]
+linker = "/usr/bin/clang"
+rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
+
+[profile.release]
+debug = true
+
 [dependencies]
 retain_mut = "0.1.5"
 regex = "1.5.4"
